--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/8ca649e504.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="projectlinkedin.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
